# Computational_Intellegence_2022

./: README.md
GA_SetCovering_Problem/: README.md  pyproject.toml
GA_SetCovering_Problem/ga_setcovering_problem/: GA.ipynb
Lab1/: README.md  pyproject.toml
Lab1/lab1/: code.ipynb
Lab1_Hill_Climping/: README.md  pyproject.toml
Lab1_Hill_Climping/lab1_hill_climping/: lab1_H.ipynb
Lab3_NIM_Game/: pyproject.toml
Lab3_NIM_Game/nim_game/: nim.ipynb
lab2_setCovering+ea/: README.md  pyproject.toml
lab2_setCovering+ea/lab2_setcovering+ea/: lab2_setCoveringEA.ipynb
quarto/: main.py
quarto/quarto/: objects.py  objects2.py
