[tool.poetry]
name = "lab1-hill-climping"
version = "0.1.0"
description = ""
authors = ["MOHAMED KH <mohammedkhmotrash83@gmail.com>"]
readme = "README.md"
packages = [{include = "lab1_hill_climping"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
