[tool.poetry]
name = "nim-game"
version = "0.1.0"
description = ""
authors = ["MOHAMED KH <mohammedkhmotrash83@gmail.com>"]
readme = "README.md"
packages = [{include = "nim_game"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
