[tool.poetry]
name = "lab2-setcovering+ea"
version = "0.1.0"
description = ""
authors = ["MOHAMED KH <mohammedkhmotrash83@gmail.com>"]
readme = "README.md"
packages = [{include = "lab2_setcovering+ea"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
